@@ -439,6 +439,15 @@ using the scan parameter. \
 The raw cloth for costuming is found using the Butchering, Shearing, or Foraging \
 skills.
 
+DECORATE=DECORATING
+DECORATING=<ABILITY>\
+Usage    : DECORATE MOUNT/HANG/STICK [ITEM NAME]\n\r\
+Example  : decorate mount picture\n\r\
+This skill allows the player to hang or mount an item on the wall of a room.  The item will blend \
+with the room description, and while it is still GETtable, it is protected from mass \
+commands like GET ALL.  Items mounted or hung will have their display text altered, whereas \
+items put up using STICK will not.
+
 DILIGENT_STUDYING=DILIGENTSTUDYING
 DILIGENTSTUDYING=<ABILITY>\
 This character  is adept at learning, and gains an additional practice point every level.
